--- a/ChainPromise.html
+++ b/ChainPromise.html
@@ -35,9 +35,26 @@
 		});
 	}
 
+	function hydrateAuthor(post) {
+		// create new promise
+		return new Promise((resolve, reject) => {
+			// find the author
+			const authorDetails = authors.find(person.name === post.name);
+			if(authorDetails) {
+				//  "hydrate" the post object with the author object
+				post.author = authorDetails;
+				resolve(post);
+			} else {
+				reject(Error('Cannot find author'));
+			}
+		})
+		
+	}
+
 	getPostById(2)
 		.then(post => {
 			console.log(post);
+			return hydrateAuthor(post);
 		})
 
 
