--- a/ChainPromise.html
+++ b/ChainPromise.html
@@ -13,7 +13,7 @@
 		{ title: 'I love JavaScript', author: 'Suzen', id: 3},
 	];
 
-	const author = [
+	const authors = [
 		{ name: 'Katherine Worley', twitter: '@Katherine', bio: 'Loves JavaScript' },
 		{ name: 'Mary Berry', twitter: '@Mary', bio: 'Also loves JavaScript' },
 		{ name: 'Suzen Mount', twitter: '@Suzen', bio: 'And yet again, loves JavaScript'},
@@ -39,13 +39,13 @@
 		// create new promise
 		return new Promise((resolve, reject) => {
 			// find the author
-			const authorDetails = authors.find(person.name === post.author);
+			const authorDetails = authors.find(person => person.name === post.author);
 			if(authorDetails) {
 				//  "hydrate" the post object with the author object
 				post.author = authorDetails;
 				resolve(post);
 			} else {
-				reject(Error('Cannot find author'));
+				reject(Error('Cannot find author, Yo!'));
 			}
 		})
 		
@@ -53,7 +53,7 @@
 
 	getPostById(2)
 		.then(post => {
-			console.log(post);
+			console.log(post)
 			return hydrateAuthor(post);
 		})
 		.then(post => {
