adding loop example not avaiable to symbols

--- a/Symbols.html
+++ b/Symbols.html
@@ -13,6 +13,10 @@
 			[Symbol('Sam')] :[ grade: 60, gender: 'male'],
 			[Symbol('Linda')] :[ grade: 80, gender: 'female'],
 		}
+
+		for(person in classRoom) {
+			console.log(person);
+		}
 	</script>
 </body>
 </html>
