corrected syntax error in classRoom

--- a/Symbols.html
+++ b/Symbols.html
@@ -9,9 +9,9 @@
 		const person = Symbol('katherine')
 
 		const classRoom = {
-			[Symbol('Peter')] :[ grade: 50, gender: 'male'],
-			[Symbol('Sam')] :[ grade: 60, gender: 'male'],
-			[Symbol('Linda')] :[ grade: 80, gender: 'female'],
+			[Symbol('Peter')] : { grade: 50, gender: 'male'},
+			[Symbol('Sam')] : { grade: 60, gender: 'male'},
+			[Symbol('Linda')] : { grade: 80, gender: 'female'},
 		}
 
 		for(person in classRoom) {
