--- a/es6modules/index.html
+++ b/es6modules/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>js Modules
-	</title>
+	<title>js Modules</title>
 </head>
 <body>
-	<script src="app.js"></script>
+	<script src="_build/bundle.js"></script>
 </body>
 </html>
