adding more fizz buzz

--- a/fizzBuzz.html
+++ b/fizzBuzz.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <script type="text/javascript">
-	function fizzBuzz1(num){
+function fizzBuzz1(num){
 	for(let i = 1; i <- num; i++){
 		if(i % 3 === 0 && i % 5 === 0) console.log("Fizz Buzz");
 		else if(i % 3 === 0 ) console.log("Fizz");
@@ -13,7 +13,7 @@
 		else console.log(i);
 	}
 }
-fizzBuzz1(20)
+fizzBuzz1();
 
 function fizzBuzz2(){
 	for(var i=1;i<=100;i++){
@@ -63,7 +63,7 @@ function fizzBuzz4(){
 function fizzBuzz5(){
 	var output;
 	for(var i=1;i<=100;i++){
-		output = '';
+		output = 'FizzBuzz';
 		if(i%3 === 0){
 			console.log+='Fizz';
 		} 
@@ -71,9 +71,9 @@ function fizzBuzz5(){
 			console.log+='Buzz';
 		} 
 		if(console.log === '') {
-			output+=i;
+			output+=i; 
 		}
-		print(output);
+		console.log(fizzBuzz5);
 	}
 }
 
