working with const and let

--- a/1.html
+++ b/1.html
@@ -4,7 +4,12 @@
 	<title>let and const </title>
 </head>
 <body>
-	<script type="text/javascript"></script>
+	<script type="text/javascript">
 
+	var width = 100;
+	let height = 200;
+	const key = 'hello';
+
+	</script>
 </body>
 </html>
