--- a/1.html
+++ b/1.html
@@ -7,6 +7,13 @@
 	<script type="text/javascript">
 
 	var width = 100;
+	console.log(width);
+	width = 200;
+	console.log(width);
+
+	var width = 200;
+	console.log(width);
+	
 	let height = 200;
 	const key = 'hello';
 
