adding functions with var

--- a/1.html
+++ b/1.html
@@ -8,12 +8,26 @@
 
 	var width = 100;
 	console.log(width);
+
 	width = 200;
 	console.log(width);
 
 	var width = 200;
 	console.log(width);
-	
+
+	function setWidth() {
+		var width = 100;
+		console.log(width);
+	}
+	setWidth();
+
+	var age = 100;
+	if (age > 12) {
+		var dogYears = age * 7;
+		console.log(`You are ${dogYears} do years old!`)
+	}
+
+
 	let height = 200;
 	const key = 'hello';
 
