adding to var function

--- a/1.html
+++ b/1.html
@@ -22,10 +22,9 @@
 	setWidth();
 
 	var age = 100;
-	if (age > 12) {
-		
+	if(age > 12) {
 		var dogYears = age * 7;
-		console.log(`You are ${dogYears} do years old!`)
+		console.log(`You are ${dogYears} do years old!`);
 	}
 
 	dogYears();
