working on var if then statement

--- a/1.dog.html
+++ b/1.dog.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-	<script type="text/javascript">
+<script type="text/javascript">
 	function setWidth() {
 			var width = 100;
 			console.log(width);
@@ -18,10 +18,10 @@
 			console.log(`You are ${dogYears} do years old!`);
 	}
 
-	dogYears();
+let height = 200;
+const key = 'abc123';
 
-
-	</script>
+</script>
 
 </body>
 </html>
