showing difference between scoping of let and const

--- a/1.html
+++ b/1.html
@@ -23,11 +23,9 @@
 
 	var age = 100;
 	if(age > 12) {
-		var dogYears = age * 7;
+		let dogYears = age * 7;
 		console.log(`You are ${dogYears} do years old!`);
 	}
-
-	dogYears();
 
 	let height = 200;
 	const key = 'hello';
