making notes of updating const variable

--- a/3.html
+++ b/3.html
@@ -9,7 +9,7 @@
 
 	// var is function scoped
 	// let and const are block scoped
-
+	// cannont update const variable, but you can with let variable
 
 	const key = 'abc123';
 	let points = 50;
@@ -19,7 +19,6 @@
 		console.log("it ran!");
 		let winner = true;
 	}
-
 
 </script>
 
