adding the const person freeze

--- a/3.person.html
+++ b/3.person.html
@@ -6,9 +6,18 @@
 <body>
 
 	<script type="text/javascript">
-		
+		const key = 'abc123';
+		let points = 50;
+		let winner = false;
 
-		
+		const person = {
+			name: 'katherine',
+			age: 'whatever',
+		}
+
+		const katherine = Object.freeze(person);
+
+
 	</script>
 
 </body>
