adding var IFFE

--- a/4.html
+++ b/4.html
@@ -6,9 +6,16 @@
 <body>
 
 	<script type="text/javascript">
+		(function() {
+			var name = 'This is my name';
+
+
+		})();
+		
 		
 
-		
+
+
 	</script>
 
 </body>
