testing block scope vs global with IFFE

--- a/4.html
+++ b/4.html
@@ -7,14 +7,8 @@
 
 	<script type="text/javascript">
 		(function() {
-			var name = 'This is my name';
-
-
+			var hello = 'This is my name';
 		})();
-		
-		
-
-
 
 	</script>
 
