--- a/4.html
+++ b/4.html
@@ -10,6 +10,11 @@
 			var hello = 'This is my name';
 		})();
 
+		{
+		const name = "katherine";
+		console.log(name);
+		}
+
 	</script>
 
 </body>
