adding for loop

--- a/4.html
+++ b/4.html
@@ -17,7 +17,12 @@
 
 		for(var i = 0; i < 10; i++) {
 			console.log(i);
+			setTimeout(function() {
+				console.log('The number is ' + i);
+			}, 1000);
 		}
+
+
 
 	</script>
 
