show diff between let and var in for loop

--- a/4.html
+++ b/4.html
@@ -22,7 +22,12 @@
 			}, 1000);
 		}
 
-
+		for(let i = 0; i < 10; i++) {
+			console.log(i);
+			setTimeout(function() {
+				console.log('The number is ' + i);
+			}, 1000);
+		}
 
 	</script>
 
