--- a/5.html
+++ b/5.html
@@ -5,11 +5,8 @@
 </head>
 <body>
 	<script type="text/javascript">
-		
-
-
-		
+		console.log(pizza);
+		const pizza = 'Deep Dish';
 	</script>
-
 </body>
 </html>
