adding a fat arrow and mapping variables

--- a/6.html
+++ b/6.html
@@ -9,12 +9,11 @@
 		const names = ['katherine', 'katherine2', 'katherine3'];
 
 		const fullNames = names.map(function(names) {
-			return `${name} is my name`;
+			return `${names} is my name`;
 		})
 
-		const fullNames2 = names.map(function(names) {
-			return `${name} is also my name`;
-
+		const fullNames2 = names.map((names) => {
+			return `${names} is also my name`; 
 		})
 
 	</script>
