showing different mapping with plural and singular with arrow and no arrow

--- a/6.html
+++ b/6.html
@@ -16,6 +16,11 @@
 			return `${names} is also my name`; 
 		})
 
+		const fullNames3 = names.map(name => `${name} once again is my name`);
+
+		const fullNames4 = names.map(() => `cool once again is my name`);
+
+
 	</script>
 
 </body>
