adding function of say my name

--- a/6.html
+++ b/6.html
@@ -19,7 +19,11 @@
 		const fullNames3 = names.map(name => `${name} once again is my name`);
 
 		const fullNames4 = names.map(() => `cool once again is my name`);
+		console.log(fullNames4)
 
+		function sayMyName(name) {
+			alert
+		}
 
 	</script>
 
