adding to full names variable

--- a/6.html
+++ b/6.html
@@ -25,6 +25,10 @@
 			alert(`Hello ${name}`);
 		}
 
+		const sayMyName2 = (name) => { 
+			alert(`Hellol $(name)!`)
+		};
+			
 	</script>
 
 </body>
