adding const map

--- a/7.html
+++ b/7.html
@@ -8,6 +8,8 @@
 <script type="text/javascript">
 	const race = '100 dash';
 	const winners = ['first name', 'second name', 'third name'];
+
+	cons win = winnners.map(winner => {name: winner, race: race, place: i})
 	
 </script>
 
