adding to object literal

--- a/7.html
+++ b/7.html
@@ -9,7 +9,7 @@
 	const race = '100 dash';
 	const winners = ['first name', 'second name', 'third name'];
 
-	cons win = winnners.map(winner => {name: winner, race: race, place: i})
+	cons win = winnners.map(winner => ({name: winner, race: race, place: i}))
 	
 </script>
 
