adding to arrow functions

--- a/8.html
+++ b/8.html
@@ -6,7 +6,10 @@
 <body>
 
 	<script type="text/javascript">
-		const names
+		const names = ['katherine', 'this is katherine', 'yet again, katherine'];
+		const fullNames = names.map(function(name){
+			return `${name} LastName`;
+		});
 
 
 	</script>
