added console log for fullNames

--- a/8.html
+++ b/8.html
@@ -7,11 +7,14 @@
 
 	<script type="text/javascript">
 		const names = ['katherine', 'this is katherine', 'yet again, katherine'];
-		const fullNames = names.map(function(name){
+		const fullNames = names.map(function(name) {
 			return `${name} LastName`;
 		});
+		console.log(fullNames);
 
 
+
+		
 	</script>
 
 </body>
