creating bill calcate

--- a/9.html
+++ b/9.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Default Arguements</title>
 </head>
 <body>
+
+	<script type="text/javascript">
+		function calculateBill(total, tax, tip) {
+			return total + (total * tax) + (total * tip);
+		}
+
+
+		const totalBill = calculateBill(100, 0.13, 0.15);
+		console.log(totalBill);
+
+	</script>
 
 </body>
 </html>
