adding to default arguement

--- a/9.html
+++ b/9.html
@@ -6,7 +6,7 @@
 <body>
 
 	<script type="text/javascript">
-		function calculateBill(total, tax, tip) {
+		function calculateBill(total, tax = 0.13, tip = 0.15) {
 			return total + (total * tax) + (total * tip);
 		}
 
