adding to html button

--- a/10.html
+++ b/10.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>when not to use an arrow function</title>
 </head>
 <body>
+
+	<style type="text/css">
+			button { font-size: 100px; }
+			.on { background: #ffc600; }
+	</style>
+
+	<button id="pushy">Push Me</button>
+
+	<script type="text/javascript">
+		
+		
+	</script>
 
 </body>
 </html>
