adding a const person]

--- a/10.html
+++ b/10.html
@@ -14,7 +14,18 @@
 
 	<script type="text/javascript">
 		
-		
+		const button = document.querySelector('#pushy');
+		button.addEventListener('click', () => {
+			this.classList.toggle('on');
+		});
+
+		const person = {
+			points: 23,
+			score: () => {
+				this.points++;
+			}
+		}
+
 	</script>
 
 </body>
