adding filtered to console log

--- a/11.html
+++ b/11.html
@@ -34,7 +34,10 @@
 const items = Array.from(document.querySelectorAll('[data-time]'));
 console.log(items);
 
+const filtered = items.filter(item => item.text)
 
+
+console.log(filtered);
 
 </script>
 
