filter map and reducing times to running total and seconds

--- a/11.html
+++ b/11.html
@@ -34,7 +34,14 @@
 const items = Array.from(document.querySelectorAll('[data-time]'));
 console.log(items);
 
-const filtered = items.filter(item => item.textContent.includes('Flexbox'));
+const filtered = items
+  .filter(item => item.textContent.includes('Flexbox'))
+  .map(item => item.dataset.time)
+  .map(timecode => {
+    const parts = timecode.split(':').map(part => parseFloat(part));
+    return (parts[0] * 60) + parts[1];
+  })
+  .reduce((runningTotal, seconds) => runningTotal + seconds,0)
 
 console.log(filtered);
 
