filtering out numbers larger than 70

--- a/11.2.html
+++ b/11.2.html
@@ -5,5 +5,11 @@
 </head>
 <body>
 
+<script type="text/javascript">
+	const numbers = [3, 43, 523, 54, 92, 3, 19];
+	const large = numbers.filter(num => num > 70);
+	console.log(large);
+</script>
+
 </body>
 </html>
