adding interpolation to the template string

--- a/12.html
+++ b/12.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Template Strings</title>
 </head>
 <body>
+
+<script type="text/javascript">
+	const name = 'Peter';
+	const age = 2;
+	const sentence = `The name of the dog is ${name} and his age is ${age * 7} years old.`
+
+
+
+
+</script>
+
 
 </body>
 </html>
