--- a/12.html
+++ b/12.html
@@ -8,13 +8,9 @@
 <script type="text/javascript">
 	const name = 'Peter';
 	const age = 2;
-	const sentence = `The name of the dog is ${name} and his age is ${age * 7} years old.`
+	const sentence = `The name of the dog is ${name} and his age is ${age * 7} years old.`;
 
-
-
-
+	console.log(sentence);
 </script>
-
-
 </body>
 </html>
