--- a/Drumbkit/index.html
+++ b/Drumbkit/index.html
@@ -7,10 +7,28 @@
 <body>
 
 <div class="keys">
-	<div class="data-key">
-		
-	</div>
+<div data-key="65" class="key">
+	<kbd>A</kbd>
+	<span class="sound">kick</span> 
 </div>
+
+
+
+</div>
+
+
+
+
+<audio data-key="65" src="sounds/clap.wav"></audio>
+<audio data-key="83" src="sounds/hihat.wav"></audio>
+<audio data-key="68" src="sounds/kick.wav"></audio>
+<audio data-key="70" src="sounds/openhat.wav"></audio>
+<audio data-key="71" src="sounds/boom.wav"></audio>
+<audio data-key="72" src="sounds/ride.wav"></audio>
+<audio data-key="74" src="sounds/snare.wav"></audio>
+<audio data-key="75" src="sounds/tom.wav"></audio>
+<audio data-key="76" src="sounds/tink.wav"></audio>
+
 
 </body>
 </html>
