--- a/Drumbkit/index.html
+++ b/Drumbkit/index.html
@@ -7,12 +7,51 @@
 <body>
 
 <div class="keys">
+
 <div data-key="65" class="key">
 	<kbd>A</kbd>
 	<span class="sound">kick</span> 
 </div>
 
+<div data-key="83" class="key">
+	<kbd>S</kbd>
+	<span class="sound">kick</span> 
+</div>
 
+<div data-key="68" class="key">
+	<kbd>D</kbd>
+	<span class="sound">kick</span> 
+</div>
+
+<div data-key="70" class="key">
+	<kbd>F</kbd>
+	<span class="sound">kick</span> 
+</div>
+
+<div data-key="71" class="key">
+	<kbd>G</kbd>
+	<span class="sound">kick</span> 
+</div>
+
+<div data-key="72" class="key">
+	<kbd>H</kbd>
+	<span class="sound">kick</span> 
+</div>
+
+<div data-key="74" class="key">
+	<kbd>J</kbd>
+	<span class="sound">kick</span> 
+</div>
+
+<div data-key="75" class="key">
+	<kbd>K</kbd>
+	<span class="sound">kick</span> 
+</div>
+
+<div data-key="76" class="key">
+	<kbd>L</kbd>
+	<span class="sound">kick</span> 
+</div>
 
 </div>
 
