--- a/Drumbkit/index.html
+++ b/Drumbkit/index.html
@@ -65,7 +65,10 @@
 <audio data-key="75" src="sounds/tom.wav"></audio>
 <audio data-key="76" src="sounds/tink.wav"></audio>
 
-
+<script type="text/javascript">
+	
+	
+</script>
 
 </body>
 </html>
