adding sounds and image via css

--- a/Drumbkit/index.html
+++ b/Drumbkit/index.html
@@ -66,8 +66,12 @@
 <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script type="text/javascript">
-	
-	
+	window.addEventListener('keydown', funciton(e) {
+		console.log(e);
+
+
+	});
+
 </script>
 
 </body>
