adding script to the keycode

--- a/Drumbkit/index.html
+++ b/Drumbkit/index.html
@@ -67,9 +67,7 @@
 
 <script type="text/javascript">
 	window.addEventListener('keydown', funciton(e) {
-		console.log(e);
-
-
+		console.log(e.keycode)
 	});
 
 </script>
