--- a/Drumbkit/index.html
+++ b/Drumbkit/index.html
@@ -66,6 +66,7 @@
 <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+
 	window.addEventListener('keydown', function(e) {
 		const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
 		const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
@@ -74,8 +75,14 @@
 		audio.currentTime = 0; //rewind wav file to start. 
 		audio.play();
 		key.classlist.add('playing');
-		
 	});
+
+	funciton removeTransition(e){
+		if(e.propertyName !== 'transform') return; //scip if it's not a transform
+		console.log(e);
+	}
+	const keys = document.querySelectorALL('.key');
+	keys.forEach(key => key.addEventListener('transitionend', removeTransition));
 
 </script>
 
