--- a/Drumbkit/index.html
+++ b/Drumbkit/index.html
@@ -67,22 +67,23 @@
 
 <script>
 
-	window.addEventListener('keydown', function(e) {
+function playSound(e) {
 		const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
 		const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
-		console.log(audio);
 		if(!audio) return; //stop the function from running. 
 		audio.currentTime = 0; //rewind wav file to start. 
 		audio.play();
 		key.classlist.add('playing');
-	});
+}
 
-	funciton removeTransition(e){
+funciton removeTransition(e){
 		if(e.propertyName !== 'transform') return; //scip if it's not a transform
-		console.log(e);
+		this.classList.remove('playing');
 	}
+	
 	const keys = document.querySelectorALL('.key');
 	keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+	window.addEventListener('keydown', playSound);
 
 </script>
 
