--- a/Drumbkit/index.html
+++ b/Drumbkit/index.html
@@ -66,7 +66,10 @@
 <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-
+funciton removeTransition(e){
+		if(e.propertyName !== 'transform') return; //scip if it's not a transform
+		this.classList.remove('playing');
+	}
 function playSound(e) {
 		const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
 		const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
@@ -75,16 +78,28 @@ function playSound(e) {
 		audio.play();
 		key.classlist.add('playing');
 }
-
-funciton removeTransition(e){
-		if(e.propertyName !== 'transform') return; //scip if it's not a transform
-		this.classList.remove('playing');
-	}
 	
 	const keys = document.querySelectorALL('.key');
 	keys.forEach(key => key.addEventListener('transitionend', removeTransition));
 	window.addEventListener('keydown', playSound);
+</script>
 
+<script>
+  function removeTransition(e) {
+    if (e.propertyName !== 'transform') return;
+    e.target.classList.remove('playing');
+  }
+  function playSound(e) {
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
+    if (!audio) return;
+    key.classList.add('playing');
+    audio.currentTime = 0;
+    audio.play();
+  }
+  const keys = Array.from(document.querySelectorAll('.key'));
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+  window.addEventListener('keydown', playSound);
 </script>
 
 </body>
