adding inline styles

--- a/Clock/index.html
+++ b/Clock/index.html
@@ -4,6 +4,25 @@
 	<title>Clock</title>
 </head>
 <body>
+<div class="clock">
+	<div class="clock-face">
+		<div class="hand hour-hand"></div>	
+		<div class="hand min-hand"></div>	
+		<div class="hand second-hand"></div>	
+	</div>
+</div>
+
+<style>
+	html {
+		background: 
+	}
+
+
+
+
+</style>
+
+
 
 </body>
 </html>
