--- a/Clock/index.html
+++ b/Clock/index.html
@@ -20,6 +20,20 @@
 		text-align: center;
 		font-size: 10px;
 	}
+
+	.clock-face {
+		position: relative;
+		width: 100%;
+		height: 100%;
+		transform: translate(-5px);
+	}
+
+	.hand {
+		width: 50%;
+		height:6px;
+		background: black;
+		
+	}
 </style>
 
 
