--- a/Clock/index.html
+++ b/Clock/index.html
@@ -20,6 +20,15 @@
 		text-align: center;
 		font-size: 10px;
 	}
+	
+	.clock {
+		width:30rem;
+		height:30rem;
+		border:20px solid white;
+		border-radius: 50%;
+		
+	}
+
 
 	.clock-face {
 		position: relative;
@@ -29,11 +38,18 @@
 	}
 
 	.hand {
-		width: 50%;
+		width:50%;
 		height:6px;
-		background: black;
-		
+		background:black;
+		position:absolute;
+		top:50%;
+		transform-origin: 100%;
+		transform: rotate(90deg);
+		transition: all 0.05s;
+		transition-timing-function: cubic-bezier(0.1, 2.7, 0.50,1);
+
 	}
+
 </style>
 
 
