--- a/Clock/index.html
+++ b/Clock/index.html
@@ -20,13 +20,28 @@
 		text-align: center;
 		font-size: 10px;
 	}
+
+	body {
+		font-size: 2rem;
+		display: flex;
+		flex: 1;
+		min-height: 100wh;
+		align-items: center;
+	}
 	
 	.clock {
 		width:30rem;
 		height:30rem;
 		border:20px solid white;
 		border-radius: 50%;
-		
+		margin: 50px auto;
+		position: relative;
+		padding: 2rem;
+		box-shadow: 
+			0 0 0px 4px rbga(0, 0, 0, 1),
+			inset 0 0 0 3px #EFEFEF,
+			inset 0 0 10px black,  
+			0 0 10px rgba(0, 0, 0, 2);
 	}
 
 
