added styles to clock face

--- a/Clock/index.html
+++ b/Clock/index.html
@@ -14,9 +14,9 @@
 
 <style>
 	html {
-		background: 
+		background:#018DED url(http://unsplash.it/1500/100?image=881&blur=50);
 		background-size:cover;
-		font-family-size:'helvetica neue';
+		font-family:'helvetica neue';
 		text-align: center;
 		font-size: 10px;
 	}
