adding second interval to function

--- a/Clock/index.html
+++ b/Clock/index.html
@@ -63,8 +63,16 @@
 		transition: all 0.05s;
 		transition-timing-function: cubic-bezier(0.1, 2.7, 0.50,1); 
 	}
-
 </style>
+
+<script>
+	function setData() {
+		const now = new Date();
+		const seconds = now.getSeconds();
+	}
+
+	setInterval(setData, 1000);
+</script>
 
 
 
