--- a/Clock/index.html
+++ b/Clock/index.html
@@ -67,13 +67,23 @@
 
 <script>
 	const secondHand = document.querySelector('.second-hand');
+	const minsHand = document.querySelector('.min-hand');
+	const hourHand = document.querySelector('.hour-hand');
+
 
 	function setData() {
 		const now = new Date();
 		const seconds = now.getSeconds();
 		const secondsDegrees = ((seconds / 60) * 360) + 90;
 		secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+
+		const min = now.gitMinutes();
+		const minDegrees = ((mins / 60) * 360) + 90;
 	};
+
+
+
+
 	setInterval(setData, 1000);
 </script>
 
