--- a/Clock/index.html
+++ b/Clock/index.html
@@ -73,12 +73,19 @@
 
 	function setData() {
 		const now = new Date();
+
 		const seconds = now.getSeconds();
 		const secondsDegrees = ((seconds / 60) * 360) + 90;
 		secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
 
-		const min = now.gitMinutes();
-		const minDegrees = ((mins / 60) * 360) + 90;
+		const mins = now.getMinutes();
+		const minsDegrees = ((mins / 60) * 360) + 90;
+		hourHand.style.transform = `rotate(${minsDegrees}deg)`;
+
+		const hour = now.getMinutes();
+		const hourDegrees = ((mins / 12) * 360) + 90;
+		hourHand.style.transform = `rotate(${minsDegrees}deg)`;
+
 	};
 
 
