--- a/Clock/index.html
+++ b/Clock/index.html
@@ -66,7 +66,7 @@
 </style>
 
 <script>
-	const secondHand = document.querySelector('.second-hand');
+	const secondsHand = document.querySelector('.second-hand');
 	const minsHand = document.querySelector('.min-hand');
 	const hourHand = document.querySelector('.hour-hand');
 
@@ -76,11 +76,11 @@
 
 		const seconds = now.getSeconds();
 		const secondsDegrees = ((seconds / 60) * 360) + 90;
-		secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+		secondsHand.style.transform = `rotate(${secondsDegrees}deg)`;
 
 		const mins = now.getMinutes();
 		const minsDegrees = ((mins / 60) * 360) + 90;
-		hourHand.style.transform = `rotate(${minsDegrees}deg)`;
+		minsHand.style.transform = `rotate(${minsDegrees}deg)`;
 
 		const hour = now.getMinutes();
 		const hourDegrees = ((mins / 12) * 360) + 90;
