--- a/CSSVariable/variable.html
+++ b/CSSVariable/variable.html
@@ -15,10 +15,69 @@
 
 		<label for "base">Base Color</label>
 		<input type="color" name="base" value=#ffc600>
-
-
-
 	</div>
+
+	<style type="text/css">
+		:root {
+			--base: #ffc600;
+			--spacing: 10px;
+			--blur: 10px;
+		}
+
+		img {
+			filter: blur(var(--blur));
+			padding: var(--spacing);
+			background: var(--base);
+		}
+
+		.hi {
+			color: var(--base);
+		}
+
+
+		body {
+			text-align: center;
+		}
+	
+		body {
+			background: #195549;
+			color: white;
+			font-family: 'helvetica neue', sans-serif;
+			font-weight: 100;
+			font-size: 50px;
+		}
+
+		.controls {
+			margin-bottom: 50px; 
+		}
+
+	* {
+
+	}
+
+	a {
+		color: var(--base);
+		text-decoration: none;
+	}
+
+	input {
+		width:100px; 
+	}
+	</style>
+
+	<script type="text/javascript">
+		const inputs = document.querySelectorAll('.controls input');
+
+		function handleUpdate() {
+
+			const suffix = this.dataset.sizing || '';
+			document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+		}
+
+		inputs.forEach(input => input.addEventListener('change', handleUpdate));
+		inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));
+
+	</script>
 
 </body>
 </html>
