--- a/ArrayCardio/cardio.html
+++ b/ArrayCardio/cardio.html
@@ -25,18 +25,34 @@
 
    // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+
+    const fifteen = inventors.filters(function(inventor) {
+    	if(inventor.year >= 1500 && inventor.year < 1600) {
+    		return true;
+    	}
+    })
+    console.table(fifteen);
     // Array.prototype.map()
+
     // 2. Give us an array of the inventors' first and last names
     // Array.prototype.sort()
+
     // 3. Sort the inventors by birthdate, oldest to youngest
     // Array.prototype.reduce()
+
     // 4. How many years did all the inventors live?
+
     // 5. Sort the inventors by years lived
+
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+ 
     // 7. sort Exercise
+
     // Sort the people alphabetically by last name
+
     // 8. Reduce Exercise
+
     // Sum up the instances of each of these
 
 
