--- a/ArrayCardio/cardio.html
+++ b/ArrayCardio/cardio.html
@@ -26,14 +26,19 @@
    // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
 
-    const fifteen = inventors.filter(function(inventor) {
+    const fifteenOne = inventors.filter(function(inventor) {
     	if(inventor.year >= 1500 && inventor.year < 1600) {
     		return true;
     	}
-    })
-    console.table(fifteen);
+    });
+    console.table(fifteenOne);
+
+    const fifteenTwo = inventors.filter(inventor => (inventor.year >= 1500 && inventor.year < 1600))
+    
+    console.table(fifteenTwo)
 
     // Array.prototype.map()
+
 
     // 2. Give us an array of the inventors' first and last names
     // Array.prototype.sort()
