--- a/ArrayCardio/cardio.html
+++ b/ArrayCardio/cardio.html
@@ -23,8 +23,9 @@
   const people = ['Beck, Glenn', 'Becker, Carl', 'Beckett, Samuel', 'Beddoes, Mick', 'Beecher, Henry', 'Beethoven, Ludwig', 'Begin, Menachem', 'Belloc, Hilaire', 'Bellow, Saul', 'Benchley, Robert', 'Benenson, Peter', 'Ben-Gurion, David', 'Benjamin, Walter', 'Benn, Tony', 'Bennington, Chester', 'Benson, Leana', 'Bent, Silas', 'Bentsen, Lloyd', 'Berger, Ric', 'Bergman, Ingmar', 'Berio, Luciano', 'Berle, Milton', 'Berlin, Irving', 'Berne, Eric', 'Bernhard, Sandra', 'Berra, Yogi', 'Berry, Halle', 'Berry, Wendell', 'Bethea, Erin', 'Bevan, Aneurin', 'Bevel, Ken', 'Biden, Joseph', 'Bierce, Ambrose', 'Biko, Steve', 'Billings, Josh', 'Biondo, Frank', 'Birrell, Augustine', 'Black, Elk', 'Blair, Robert', 'Blair, Tony', 'Blake, William'];
 
 
-   // Array.prototype.filter()
-    // 1. Filter the list of inventors for those who were born in the 1500's
+// Array.prototype.filter()
+// 1. Filter the list of inventors for those who were born in the 1500's
+// Array.prototype.map()
 
     const fifteenOne = inventors.filter(function(inventor) {
     	if(inventor.year >= 1500 && inventor.year < 1600) {
@@ -37,15 +38,25 @@
     
     console.table(fifteenTwo)
 
-    // Array.prototype.map()
+ // 2. Give us an array of the inventors' first and last names
+ // Array.prototype.sort()
+
+    const fullNamesOne = inventors.map(inventor => inventor.first + ' ' + inventor.last);
+    console.log(fullNamesOne);
+
+    const fullNamesTwo = inventors.map(inventor => `${inventor.first} ${inventor.last}`);
+    console.log(fullNamesTwo);
+
+// 3. Sort the inventors by birthdate, oldest to youngest
+// Array.prototype.reduce()
+		
+		const ordered = inventors.sort(function(firstPerson, secondPerson){
+			if(firstPerson.year > secondPerson.year)
 
 
-    // 2. Give us an array of the inventors' first and last names
-    // Array.prototype.sort()
-
-    // 3. Sort the inventors by birthdate, oldest to youngest
-    // Array.prototype.reduce()
-
+		})
+	
+	
     // 4. How many years did all the inventors live?
 
     // 5. Sort the inventors by years lived
