--- a/ArrayCardio/cardio.html
+++ b/ArrayCardio/cardio.html
@@ -50,7 +50,7 @@
 // 3. Sort the inventors by birthdate, oldest to youngest
 // Array.prototype.reduce()
 		
-		const ordered = inventors.sort(function(firstPerson, secondPerson){
+		const orderedOne = inventors.sort(function(firstPerson, secondPerson){
 			if(firstPerson.year > secondPerson.year) {
 				return 1;
 			} else {
@@ -58,7 +58,7 @@
 			}
 		});
 
-		console.table(ordered)
+		console.table(orderedOne)
 
 
 		const orderedTwo = inventors.sort((firstPerson, secondPerson) => firstPerson.year > secondPerson.year ? 1 : -1 );
@@ -68,11 +68,27 @@
 	
     // 4. How many years did all the inventors live?
 
+    	const totalYears = inventors.reduce((total, inventor) => {
+    		return total  + (inventor.passed - inventor.year);
+    	}, 0);
+
+    	console.log(totalYears);	
+
     // 5. Sort the inventors by years lived
+    const oldest = inventors.sort(function(firstPerson, secondPerson) {
+    	const lastGuy = firstPerson.passed - firstPerson.year;
+    	const nextGuy = secondPerson.passed - secondPerson.year;
+    	return lastGuy > nextGuy ? -1 : 1;
+    });
+
+    console.table(oldest)
+
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
  
+
+
     // 7. sort Exercise
 
     // Sort the people alphabetically by last name
