--- a/ArrayCardio/cardio.html
+++ b/ArrayCardio/cardio.html
@@ -86,6 +86,10 @@
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+
+		const category = document.querySelector('.content');
+		const links = Array.from(category.querySelectorAll('a'));
+    const de = links.map(link => link.textContent).filter(streetName => streetName.includes('de'));
  
 
 
