adding const last and first

--- a/ArrayCardio/cardio.html
+++ b/ArrayCardio/cardio.html
@@ -87,15 +87,18 @@
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
-		const category = document.querySelector('.mw-category');
-		const links = Array.from(category.querySelectorAll('a'));
-    const de = links.map(link => link.textContent).filter(streetName => streetName.includes('de'));
- 
-
+		// const category = document.querySelector('.mw-category');
+		// const links = Array.from(category.querySelectorAll('a'));
+  //   const de = links.map(link => link.textContent).filter(streetName => streetName.includes('de'));
 
     // 7. sort Exercise
-
     // Sort the people alphabetically by last name
+
+    const alpha = people.sort(funciton(lastOne, nextOne) {
+    	const [last, first] = lastOne.split(', ');
+    	const [last, first] = nextOne.split(', ');
+    	console.log(last, first);	
+    });
 
     // 8. Reduce Exercise
 
