changing variable names:

--- a/ArrayCardio/cardio.html
+++ b/ArrayCardio/cardio.html
@@ -95,8 +95,8 @@
     // Sort the people alphabetically by last name
 
     const alpha = people.sort(funciton(lastOne, nextOne) {
-    	const [last, first] = lastOne.split(', ');
-    	const [last, first] = nextOne.split(', ');
+    	const [alast, afirst] = lastOne.split(', ');
+    	const [blast, bfirst] = nextOne.split(', ');
     	console.log(last, first);	
     });
 
