--- a/ArrayCardio/cardio.html
+++ b/ArrayCardio/cardio.html
@@ -94,18 +94,32 @@
     // 7. sort Exercise
     // Sort the people alphabetically by last name
 
-    const alpha = people.sort(funciton(lastOne, nextOne) {
-    	const [alast, afirst] = lastOne.split(', ');
-    	const [blast, bfirst] = nextOne.split(', ');
-    	console.log(last, first);	
-    });
+
+
+    const alpha = people.sort((lastOne, nextOne) => {
+    	const [aLast, aFirst] = lastOne.split(', ');
+    	const [bLast, bFirst] = nextOne.split(', ');
+			return aLast > bLast ? -1 : 1;
+	    });
+    console.log(alpha);
+
 
     // 8. Reduce Exercise
-
     // Sum up the instances of each of these
 
 
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+
+    const transportation = data.reduce(function(obj, item){
+    	if(!obj[item]) {
+    		obj[item] = 0;
+    	}
+    	obj[item]++;
+    	return obj; 
+    }, {})
+
+
 </script>
 
 
