--- a/AjaxTypeAhead/ajax.html
+++ b/AjaxTypeAhead/ajax.html
@@ -9,7 +9,18 @@
 		const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
 		const cities = [];
 
-		fetch(endpoint).then(blob => console.log(blob));
+		fetch(endpoint)
+		.then(blob => blob.json())
+		.then(data => cities.push(...data))
+
+
+		function findMatches(wordToMatch, cities) {
+			return cities.filter(place => {
+				// here we need to figure out if the city or stat matches what was searched. 
+				const regex = RegExp(wordToMatch, 'gi')
+				return place.city.match(regex) || place.state.match(regex)
+			});
+		}
 
 	</script>
 
