output search query on keyup

--- a/AjaxTypeAhead/ajax.html
+++ b/AjaxTypeAhead/ajax.html
@@ -22,6 +22,18 @@
 			});
 		}
 
+		function displayMatches() {
+			const matchArray = findMatches(this.value, cities);
+			console.log(matchArray);
+		}
+
+		const searchInput = document.querySelector('.search');
+		const suggestions = document.querySelector('.suggestions');
+
+		searchInput.addEventListener('change', displayMatches);
+		searchInput.addEventListener('keyup', displayMatches);
+
+
 	</script>
 
 </body>
