adding innerHTML variable

--- a/AjaxTypeAhead/ajax.html
+++ b/AjaxTypeAhead/ajax.html
@@ -24,7 +24,15 @@
 
 		function displayMatches() {
 			const matchArray = findMatches(this.value, cities);
-			console.log(matchArray);
+			const html = matchArray.map(place => {
+				return `
+				<li>
+				<span class="name">${place.city}, ${place.state}</span>
+				<span class="population">${place.population}</span>
+				</li>
+				`
+			}).join('');
+			suggestions.innerHTML = html;
 		}
 
 		const searchInput = document.querySelector('.search');
@@ -32,8 +40,6 @@
 
 		searchInput.addEventListener('change', displayMatches);
 		searchInput.addEventListener('keyup', displayMatches);
-
-
 	</script>
 
 </body>
