--- a/AjaxTypeAhead/ajax.html
+++ b/AjaxTypeAhead/ajax.html
@@ -35,9 +35,14 @@
 		function displayMatches() {
 			const matchArray = findMatches(this.value, cities);
 			const html = matchArray.map(place => {
+				const regex = new RegExp(this.value, 'gi');
+				
+				const cityName = place.city.replace(regex, `<span class="hl">${this.value}</span>`);
+				const stateName = place.state.replace(regex, `<span class="hl">${this.value}</span>`);
+				
 				return `
 				<li>
-				<span class="name">${place.city}, ${place.state}</span>
+				<span class="name">${cityName}, ${stateName}</span>
 				<span class="population">${place.population}</span>
 				</li>
 				`
