--- a/AjaxTypeAhead/ajax.html
+++ b/AjaxTypeAhead/ajax.html
@@ -32,11 +32,15 @@
 			});
 		}
 
+		function numberWithCommas(x) {
+			return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',');
+		}
+
 		function displayMatches() {
 			const matchArray = findMatches(this.value, cities);
 			const html = matchArray.map(place => {
 				const regex = new RegExp(this.value, 'gi');
-				
+
 				const cityName = place.city.replace(regex, `<span class="hl">${this.value}</span>`);
 				const stateName = place.state.replace(regex, `<span class="hl">${this.value}</span>`);
 				
