--- a/AjaxTypeAhead/ajax.html
+++ b/AjaxTypeAhead/ajax.html
@@ -47,7 +47,7 @@
 				return `
 				<li>
 				<span class="name">${cityName}, ${stateName}</span>
-				<span class="population">${place.population}</span>
+				<span class="population">${numberWithCommas(place.population)}</span>
 				</li>
 				`
 			}).join('');
