--- a/ArrayCardioDayTwo/daytwo.html
+++ b/ArrayCardioDayTwo/daytwo.html
@@ -1,5 +1,3 @@
-
-    
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,11 +23,33 @@
     ];
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const isAdult = people.some(function(person) {
+      const currentYear = (new Date()).getFullYear();
+      if(currentYear - person.year >= 19) {
+        return true;
+      }
+    });
+
+    console.log(isAdult);
+
+    const isAdultTwo = people.some(person => {
+      const currentYear = (new Date()).getFullYear();
+      return currentYear - person.year >= 19;
+    });
+
+    console.log(isAdultTwo);
+
+    
+
     // Array.prototype.every() // is everyone 19 or older?
+
     // Array.prototype.find()
+
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+
     // Array.prototype.findIndex()
+
     // Find the comment with this ID
     // delete the comment with the ID of 823423
   </script>
