--- a/ArrayCardioDayTwo/daytwo.html
+++ b/ArrayCardioDayTwo/daytwo.html
@@ -39,14 +39,21 @@
 
     console.log(isAdultTwo);
 
-    const isAdultThree = people.every(person => ((new Date()).
+    const isAdultThree = people.some(person => ((new Date()).
       getFullYear()) - person.year >= 19);
 
     console.log({isAdultThree});
 
     // Array.prototype.every() // is everyone 19 or older?
 
+    const allAdults = people.every(person => ((new Date()).
+      getFullYear()) - person.year >= 19);
+
+    console.log({allAdults});
+
     // Array.prototype.find()
+
+    
 
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
