--- a/ArrayCardioDayTwo/daytwo.html
+++ b/ArrayCardioDayTwo/daytwo.html
@@ -53,12 +53,29 @@
 
     // Array.prototype.find()
 
-    
+
 
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
 
+    const comment = comments.find(function(comment){
+      if(comment.id === 823423) {
+        return true;
+      }
+    });
+
+    console.log(comment);
+
+    const commentTwo = comments.find(comment => comment.id === 823423);
+
+    console.log(comment);
+ 
     // Array.prototype.findIndex()
+
+    const index = comments.findIndex(comment => comment.id === 823423);
+    console.log(index);
+
+    comments.splice(index, 1);
 
     // Find the comment with this ID
     // delete the comment with the ID of 823423
