just keeping on keeping with array cardio

--- a/ArrayCardioDayTwo/daytwo.html
+++ b/ArrayCardioDayTwo/daytwo.html
@@ -76,6 +76,11 @@
     console.log(index);
 
     comments.splice(index, 1);
+    
+    const newComments = [
+      ...comments.slice(0, index),
+      ...comments.slice(index + 1)
+    ];
 
     // Find the comment with this ID
     // delete the comment with the ID of 823423
