--- a/sort.html
+++ b/sort.html
@@ -7,6 +7,9 @@
 
 	<script type="text/javascript">
 
+
+	const numbers = [3, 0, 2, 5, -1, 4, 10, 20, 30, 100, 1, -10];
+
 	function insertion_Sort(arr)
 		{
 		  for (var i = 1; i < arr.length; i++) 
@@ -35,7 +38,7 @@
 		  return arr;
 		}
 
-		console.log(insertion_Sort([3, 0, 2, 5, -1, 4, 1]));
+		console.log(insertion_Sort(numbers));
 
 	</script>
 
