testing out global composite operation

--- a/Canvas/Canvas.html
+++ b/Canvas/Canvas.html
@@ -17,7 +17,7 @@ ctx.lineJoin = 'round';
 ctx.lineCap = 'round';
 ctx.lineWidth = 100;
 
-// ctx.globalCompositeOperation = 'multiply';
+ctx.globalCompositeOperation = 'multiply';
 
 let isDrawing = false;
 let lastX = 0;
