added groupEnd and groupCollapsed

--- a/ConsoleTricks.html
+++ b/ConsoleTricks.html
@@ -46,10 +46,15 @@
 		//grouping together
 		
 		dogs.forEach(dog => {
+			console.groupCollapsed(`${dog.name}`);
 			console.log(`This is ${dog.name}`);
 			console.log(`${dog.name} is ${dog.age} years old.`);
 			console.log(`${dog.name} is ${dog.age * 7} years old.`);
+			console.groupEnd(`${dog.name}`);
 		})
+		
+
+
 		
 		
 
