adding a counting dot notation in dom

--- a/ConsoleTricks.html
+++ b/ConsoleTricks.html
@@ -53,6 +53,21 @@
 			console.groupEnd(`${dog.name}`);
 		})
 		
+		//counting
+
+		console.count('katherine');
+		console.count('katherine');
+		console.count('katherine');
+		console.count('katherine');
+		console.count('katherine');
+		console.count('katherine');
+		console.count('katherine');
+		console.count('katherine');
+		console.count('katherine');
+
+		//timing 
+
+
 
 
 		
