--- a/CheckBox/checkbox.html
+++ b/CheckBox/checkbox.html
@@ -5,5 +5,18 @@
 </head>
 <body>
 
+	<div class="inbox">
+		
+		<div class="item">
+			<input type="checkbox">
+			<p>This is na inbox layout.</p>
+		</div>
+
+		
+
+
+
+	</div>
+
 </body>
 </html>
