adding div classes in input fields

--- a/CheckBox/checkbox.html
+++ b/CheckBox/checkbox.html
@@ -12,11 +12,39 @@
 			<p>This is na inbox layout.</p>
 		</div>
 
+		<div class="item">
+			<input type="checkbox">
+			<p>Check one item.</p>
+		</div>
+
+		<div class="item">
+			<input type="checkbox">
+			<p>Hold down your Shift key</p>
+		</div>
+
+		<div class="item">
+			<input type="checkbox">
+			<p>Check a lower item</p>
+		</div>
+
+		<div class="item">
+			<input type="checkbox">
+			<p>Everything in between should also be set to checked</p>
+		</div>
+
+		<div class="item">
+			<input type="checkbox">
+			<p>Don't forget to tweet your result!</p>
+		</div>
+	</div>
+
+	<script type="text/javascript">
 		
 
 
 
-	</div>
+		
+	</script>
 
 </body>
 </html>
