--- a/CheckBox/checkbox.html
+++ b/CheckBox/checkbox.html
@@ -44,6 +44,7 @@
     }
   </style>
 
+
 	<div class="inbox">
 		
 		<div class="item">
@@ -79,7 +80,25 @@
 
 	<script type="text/javascript">
 		
-	
+	const checkboxes = document.querySelectorAll('.inbox input[type="checkbox"]');
+
+	let lastChecked;
+
+	function handleCheck(e){
+		//check if they have the shift key down
+		// AND check that they are checking it
+		if(e.shiftKey && this.checked) {
+			//go adhead and do what we please 
+			
+
+		}
+
+		lastChecked = this;
+	}
+
+	checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck))
+
+	console.log(checkboxes);
 
 
 
