adding function of checkbox

--- a/CheckBox/checkbox.html
+++ b/CheckBox/checkbox.html
@@ -87,10 +87,13 @@
 	function handleCheck(e){
 		//check if they have the shift key down
 		// AND check that they are checking it
+		let inBetween = false; 
 		if(e.shiftKey && this.checked) {
 			//go adhead and do what we please 
-			
-
+			//loop over every single checkbox
+			checkboxes.forEach(checkbox => {
+				console.log(checkbox);
+			})
 		}
 
 		lastChecked = this;
